--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.5",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^2.0.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^5.0.0",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^11.0.0",
